First round of styling and refactoring to apply styling correctly

--- a/index.html
+++ b/index.html
@@ -24,34 +24,38 @@
     <div id="banner">
         <div id="Herotext">
             <h2>An ode to code</h2>
-            <p>by Odin</p>
-            <button>Give an eye</button>
+            <p>Borrowed from the book of Odin's feats we present a tribute to his undying will to gain wisdom.</p>
+            <button>Offer an eye</button>
         </div>
         <div id="Hero">
-            <p>"</>"</p>
+            <p id="codetext">
+                < /</p>
         </div>
     </div>
     <div id="section">
-        <div id="usps">
-            <div id="firstusp" class="usp">
-                <img src="">
-                <h3>His Style</h3>
-                <p>Unwavering talent for eyepatches and hats selected by deities across the timeline.</p>
-            </div>
-            <div id="secondusp" class="usp">
-                <img src="">
-                <h3>His Grace</h3>
-                <p>Unwavering talent for eyepatches and hats selected by deities across the timeline.</p>
-            </div>
-            <div id="thirdusp" class="usp">
-                <img src="">
-                <h3>His Mind</h3>
-                <p>Unwavering talent for eyepatches and hats selected by deities across the timeline.</p>
-            </div>
-            <div id="fourthusp" class="usp">
-                <img src="">
-                <h3>His Charm</h3>
-                <p>Unwavering talent for eyepatches and hats selected by deities across the timeline.</p>
+        <div id="innersection">
+            <h2 class="traitsheader">Odin's Best Traits</h2>
+            <div id="usps">
+                <div id="firstusp" class="usp">
+                    <img src="#">
+                    <h3>His Style</h3>
+                    <p>Unwavering talent for eyepatches and hats carefully selected by deities across the timeline.</p>
+                </div>
+                <div id="secondusp" class="usp">
+                    <img src="">
+                    <h3>His Grace</h3>
+                    <p>Never a foot out of place, he trails his steps with calculated precision.</p>
+                </div>
+                <div id="thirdusp" class="usp">
+                    <img src="">
+                    <h3>His Brain</h3>
+                    <p>Swolen with knowledge the average mortal head would burst open at the seams.</p>
+                </div>
+                <div id="fourthusp" class="usp">
+                    <img src="">
+                    <h3>His Charm</h3>
+                    <p>One spoken word is all it takes to summon maidens from far and wide.</p>
+                </div>
             </div>
         </div>
     </div>
@@ -62,8 +66,8 @@
     <div id="section">
         <div id="subscribe">
             <div id="ctatext">
-                <h3>Join Odin's Teachings</h3>
-                <p>Doesn't cost an arm, leg or an eye</p>
+                <h3 style="margin-bottom: 0;">Join Odin's Teachings</h3>
+                <p style="margin-top: 0;">Your support doesn't cost an arm or a leg</p>
             </div>
             <div id="joinbtn">
                 <button>Join Today</button>
