Added images in place of placeholders and finished styling

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <button>Offer an eye</button>
         </div>
         <div id="Hero">
-            <p id="codetext">
-                < /</p>
+            <img width="350px" src="images/Firefly-Odin-with-an-eyepatch-cartoon-character-60938.jpg">
         </div>
     </div>
     <div id="section">
@@ -37,31 +36,33 @@
             <h2 class="traitsheader">Odin's Best Traits</h2>
             <div id="usps">
                 <div id="firstusp" class="usp">
-                    <img src="#">
+                    <img src="images/Firefly-hanging-up-cape-85888.jpg">
                     <h3>His Style</h3>
                     <p>Unwavering talent for eyepatches and hats carefully selected by deities across the timeline.</p>
                 </div>
                 <div id="secondusp" class="usp">
-                    <img src="">
+                    <img src="images/Firefly-Odin-shoe-cartoon-character-78611.jpg">
                     <h3>His Grace</h3>
                     <p>Never a foot out of place, he trails his steps with calculated precision.</p>
                 </div>
                 <div id="thirdusp" class="usp">
-                    <img src="">
+                    <img src="images/Firefly-brain-cartoon-character-24099.jpg">
                     <h3>His Brain</h3>
                     <p>Swolen with knowledge the average mortal head would burst open at the seams.</p>
                 </div>
                 <div id="fourthusp" class="usp">
-                    <img src="">
+                    <img src="images/Firefly-many-hands-reaching-upward-7094.jpg">
                     <h3>His Charm</h3>
                     <p>One spoken word is all it takes to summon maidens from far and wide.</p>
                 </div>
             </div>
         </div>
     </div>
-    <div id="testimonials">
-        <p>“There is no magic when one no longer believes.”</p>
-        <p class="author">- Odin</p>
+    <div id="tsection">
+        <div id="testimonials">
+            <p>“There is no magic when one no longer believes.”</p>
+            <p class="author">- Odin</p>
+        </div>
     </div>
     <div id="section">
         <div id="subscribe">
