Testimonial adjustments made

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div id="tsection">
         <div id="testimonials">
             <p>“There is no magic when one no longer believes.”</p>
-            <p class="author">- Odin</p>
+            <p class="author"><strong>- Odin</strong></p>
         </div>
     </div>
     <div id="section">
